--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 	compile 'org.scala-lang:scala-library:2.8.1'
 	compile 'commons-cli:commons-cli:1.2'
 	compile 'log4j:log4j:1.2.16'
+	compile files('libs/ejml-0.16.jar')
 }
 
 jar {
