--- a/src/main/resources/logging/log4j.properties
+++ b/src/main/resources/logging/log4j.properties
@@ -3,9 +3,9 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 
 # Print the date in ISO 8601 format
-log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+log4j.appender.A1.layout.ConversionPattern=%-5p %c - %m%n
 
 # Print only messages of level WARN or above in the package com.foo.
-log4j.logger.cs240=INFO
-log4j.logger.cs240.domain=INFO
-log4j.logger.cs240.agents=DEBUG
+log4j.logger.cs470=INFO
+log4j.logger.cs470.domain=INFO
+log4j.logger.cs470.agents=DEBUG
