fixed timing with refreshable data

--- a/src/main/resources/logging/log4j.properties
+++ b/src/main/resources/logging/log4j.properties
@@ -8,6 +8,7 @@ log4j.appender.A1.layout.ConversionPattern=%-5p %c - %m%n
 # Print only messages of level WARN or above in the package com.foo.
 log4j.logger.cs470=INFO
 log4j.logger.cs470.bzrc=WARN
-log4j.logger.cs470.bzrc.RefreshableTanks=DEBUG
+#log4j.logger.cs470.bzrc.RefreshableTanks=DEBUG
+#log4j.logger.cs470.bzrc.RefreshableData=DEBUG
 log4j.logger.cs470.domain=INFO
 log4j.logger.cs470.agents=DEBUG
