--- a/src/main/resources/logging/log4j.properties
+++ b/src/main/resources/logging/log4j.properties
@@ -12,3 +12,4 @@ log4j.logger.cs470.bzrc=WARN
 #log4j.logger.cs470.bzrc.RefreshableData=DEBUG
 log4j.logger.cs470.domain=INFO
 log4j.logger.cs470.agents=DEBUG
+log4j.logger.cs470.movement.search=DEBUG
