--- a/src/main/resources/logging/log4j.properties
+++ b/src/main/resources/logging/log4j.properties
@@ -11,6 +11,7 @@ log4j.logger.cs470.bzrc=WARN
 #log4j.logger.cs470.bzrc.RefreshableTanks=DEBUG
 #log4j.logger.cs470.bzrc.RefreshableData=DEBUG
 log4j.logger.cs470.domain=INFO
-log4j.logger.cs470.agents=DEBUG
+log4j.logger.cs470.agents=INFO
 log4j.logger.cs470.movement.search=DEBUG
 log4j.logger.cs470.movement.PotentialFieldsMover=INFO
+
