--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
 	scalaTools 'org.scala-lang:scala-compiler:2.8.1'
 	scalaTools 'org.scala-lang:scala-library:2.8.1'
+	compile 'org.scala-lang:scala-swing:2.8.1'
 	compile 'org.scala-lang:scala-library:2.8.1'
 	compile 'commons-cli:commons-cli:1.2'
 	compile 'log4j:log4j:1.2.16'
