--- a/src/main/resources/logging/log4j.properties
+++ b/src/main/resources/logging/log4j.properties
@@ -12,8 +12,8 @@ log4j.logger.cs470.bzrc=WARN
 #log4j.logger.cs470.bzrc.RefreshableData=DEBUG
 log4j.logger.cs470.domain=INFO
 log4j.logger.cs470.agents=INFO
-log4j.logger.cs470.movement.search=DEBUG
-log4j.logger.cs470.movement.search.Searcher=DEBUG
+log4j.logger.cs470.movement.search=INFO
+log4j.logger.cs470.movement.search.Searcher=INFO
 log4j.logger.cs470.movement.PotentialFieldsMover=INFO
 log4j.logger.cs470.visualizer=INFO
 log4j.logger.cs470.domain.BayesianOccgrid=INFO
