--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,29 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>assemble</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<programs>
+						<program>
+							<mainClass>${mainClass}</mainClass>
+							<name>bzflagagent</name>
+						</program>
+					</programs>
+					<!--
+					<extraJvmArguments>-ea</extraJvmArguments>
+					-->
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
